0024545: Convertation of the generic classes to the non-generic (XmlObjMgt). In the package "XmlObjMgt" class "XmlObjMgt_Array1" was converted to the non-generic. And some changes were made in "XmlNaming" package for correct compilation of the application.